Mobile menu - added canvas css to theme - added javascript for children items - added icons and styling for mobile menu - menu fires right on tablet media query - need styling and menu children fix.

--- a/drupal/sites/default/themes/ttctheme/src/scss/modules/_main_menu.scss
+++ b/drupal/sites/default/themes/ttctheme/src/scss/modules/_main_menu.scss
@@ -56,3 +56,23 @@ $main-menu-indicator-size: 0.5rem;
   padding-top: ($list-line-height * $list-font-size) + ($main-menu-margin-top + $main-menu-margin-bottom + $main-menu-indicator-size);
 }
 body.not-front .block-system-main-menu{border-bottom:none;}
+
+.mobile-menu{
+    margin:-55px auto 0px; padding:0px;
+    display:block;
+    text-align:center;
+    
+    
+    
+    a{
+        color:#fff; 
+        display:inline-block; 
+        padding:15px 0px;
+        width:32%;
+        border-left:solid 1px #4B757C;
+
+        .fa{padding-left:6px;}
+    }
+     a:first-child{border:none;}
+    
+}
